Прислушался к рекомендациям на гите, исправил практически всё на что было указано. Доработал JWT-авторизацию: теперь она хранит не только логин пользователя, но и его роль, соответственно некоторые функции сервиса доступны только администратору (например просмотр сведений об аккаунтах или удаление любой брони, квартиры и т.д.), функции изменения/удаления квартры/брони доступны как администратору, так и пользователю создателю брони или квартиры

--- a/RestProjectController/RestProjectController.csproj
+++ b/RestProjectController/RestProjectController.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.19" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
